--- a/composer.json
+++ b/composer.json
@@ -18,11 +18,11 @@
     "require": {
         "php": "^7.2|^8.0",
         "cboden/ratchet": "^0.4.1",
-        "clue/buzz-react": "^2.5",
         "guzzlehttp/guzzle": "^7.0.1",
         "illuminate/console": "5.6.*|5.7.*|5.8.*|6.*|7.*|8.*",
         "illuminate/support": "5.6.*|5.7.*|5.8.*|6.*|7.*|8.*",
         "laravel/dusk": "^4.0|^5.0|^6.0",
+        "react/http": "^1.4",
         "yosymfony/resource-watcher": "^2.0"
     },
     "require-dev": {
