--- a/composer.json
+++ b/composer.json
@@ -26,8 +26,11 @@
         "yosymfony/resource-watcher": "^3.0"
     },
     "require-dev": {
+        "brianium/paratest": "^6.2",
         "larapack/dd": "^1.0",
-        "phpunit/phpunit": "^7.0|^8.0|^9.0"
+        "orchestra/testbench": "^6.15",
+        "phpunit/phpunit": "^7.0|^8.0|^9.0",
+        "vimeo/psalm": "^4.8",
     },
     "autoload": {
         "psr-4": {
@@ -40,7 +43,8 @@
         }
     },
     "scripts": {
-        "test": "vendor/bin/phpunit",
+        "psalm": "vendor/bin/psalm",
+        "test": "./vendor/bin/testbench package:test --parallel --no-coverage",
         "test-coverage": "vendor/bin/phpunit --coverage-html coverage"
 
     },
@@ -53,5 +57,7 @@
                 "BeyondCode\\DuskDashboard\\DuskDashboardServiceProvider"
             ]
         }
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
