--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
         "larapack/dd": "^1.0",
         "orchestra/testbench": "^6.15",
         "phpunit/phpunit": "^7.0|^8.0|^9.0",
-        "vimeo/psalm": "^4.8",
+        "vimeo/psalm": "^4.8"
     },
     "autoload": {
         "psr-4": {
