--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,8 @@
         "php": "^7.2|^8.0",
         "cboden/ratchet": "^0.4.1",
         "guzzlehttp/guzzle": "^7.0.1",
-        "illuminate/console": "5.6.*|5.7.*|5.8.*|6.*|7.*|8.*",
-        "illuminate/support": "5.6.*|5.7.*|5.8.*|6.*|7.*|8.*",
+        "illuminate/console": "5.6.*|5.7.*|5.8.*|6.*|7.*|8.*|9.*",
+        "illuminate/support": "5.6.*|5.7.*|5.8.*|6.*|7.*|8.*|9.*",
         "laravel/dusk": "^4.0|^5.0|^6.0",
         "react/http": "^1.4",
         "yosymfony/resource-watcher": "^3.0"
@@ -28,7 +28,7 @@
     "require-dev": {
         "brianium/paratest": "^6.2",
         "larapack/dd": "^1.0",
-        "orchestra/testbench": "^6.15",
+        "orchestra/testbench": "^6.15|^7.0",
         "phpunit/phpunit": "^7.0|^8.0|^9.0",
         "vimeo/psalm": "^4.8"
     },
